# blog-romira-dev-leptos

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  docker-compose.yml  justfile  package-lock.json  rust-analyzer.toml  rust-toolchain.toml
.cargo/: config.toml
.claude/: settings.json
.githooks/: pre-commit
.sqlx/: query-02fee51326b2cfa8587c00752517527f046efb10a1ac4d4f71f1a3288bda3df6.json  query-03b4a26e9709054e4369f45cc8c059d1a40f8dc88c23fc4c2a90373a0c28858b.json  query-08f4308b0367284ea94e884959d590a87a18d6c03bf9102f9aca7ecd9322beb2.json  query-08fbdab128232880d87a164ab56693cc0b3ed43c2419ef5997f6466396b65af0.json  query-0b6980f9844a48377f3628c48d7f9173e6b6cdc26d447ff4608b433c123513ee.json  query-111d9387dcf3fc13b4810b0e3cd29dca37f88817a370c30e7cbb00a2bbf00209.json  query-13003937c50d2217ba4efee88cff2fa6cbff6e14a6e59bd145f87774b502a73f.json  query-17308cd265a49d033515d4dac016a08738523b3456ea5d5ba430fd4341c8f4eb.json  query-2bf455aff7f6a83d9c26fb709afed176c381b3e76a4aea189e9533c6073dea6c.json  query-3621892a09f38300e9ede2bc0b14789e7778d323c4a429b00860b2048509b8bd.json  query-442d43e7bc2f18180f2eb448b08a1d55d9acf5f37913ca8b7bfd7169ce82da14.json  query-50632c99e3c9bfc7181f76e5d5cfc4a1a185c7a28e64ba9253964b75f7f88136.json  query-52e6a86978f5c0501312bf1941b98dfe4a898dc1bc3eb0aff2b57aeb7412c5a0.json  query-54f5250a3e107de2a0d91671ec26ee659a062145a2c25db59ee69219a790f409.json  query-59b28436475595371a58356076f8fe4c6ea624812a43e13357c1ba58bb7b1446.json  query-5c60fcba2bf6ea11c0578f0238813d2176f02592321a2b2bb85ceb6a84aed5aa.json  query-5cda46b44a73d49dcd11ed14c560df928cd9ae6298f632bd190938036b49abbc.json  query-5e0a70eba45294c799f07048a5f0e3aedece675ebcc8c45fb6f4d25f7b456daf.json  query-61e90ec62e87e7fabb7cfb650c75d7d996159cf835f6a29867803db51c3ee280.json  query-65f4f43de8926362a7d9b8d3982399f87dbd38b6879030d001198ea0236f4e2f.json  query-679fbcb47e9a211ab80a2fb554b33ce0a2b591c64411b0798263ded29de23491.json  query-68468c4176e5ebe269ab48fda595dd48f4c2338951868b1e2c71ccd9d6416119.json  query-73feab4609d701a9983e5cfc3d61ed5f140b03d70d640609aa37c4a89f1e8959.json  query-750053a5fa97afb5ee3391b680a83be9e07ca735168f39d2c2e2ce6191b7cb89.json  query-7b2afa3100ddfe95d46c0423d8339d02749ee946381b765cc0b9ec83110e83ca.json  query-7d0c1f11ece91d43b7674ea4752679f43774ebd2e567a8cada547125780b8dbc.json  (+38 more)
app/: Cargo.toml
app/src/: common.rs  constants.rs  error.rs  front.rs  lib.rs  material-lighter.min.css  material.min.css  server.rs  theme.module.scss
app/src/common/: dto.rs  handlers.rs  imgix_url.rs  markdown.rs  response.rs
app/src/common/handlers/: admin.rs  auth.rs
app/src/common/handlers/admin/: delete_article.rs  get_admin_articles.rs  get_article_for_edit.rs  get_categories.rs  images.rs  publish_article.rs  save_draft.rs  save_published.rs
app/src/common/handlers/admin/images/: delete_image.rs  generate_upload_url.rs  get_images.rs  register_image.rs
app/src/common/handlers/auth/: get_auth_user.rs  is_oauth_configured.rs
app/src/front/: app.rs  components.rs  hooks.rs  pages.rs
app/src/front/app/: app_component.rs  shell.rs
app/src/front/components/: article_body.module.scss  article_card.module.scss  article_card.rs  article_detail.module.scss  article_detail.rs  author_card.module.scss  author_card.rs  header.module.scss  header.rs  image_list.module.scss  image_list.rs  image_picker_modal.module.scss  image_picker_modal.rs  not_found.module.scss  not_found.rs  sns_icon.module.scss  sns_icon.rs  upload_area.module.scss  upload_area.rs
app/src/front/components/article_card/: article_card_item.rs  article_card_list.rs
app/src/front/components/sns_icon/: github_icon.rs  x_icon.rs
app/src/front/hooks/: use_scroll_sync.rs
app/src/front/pages/: admin_page.rs  article_page.rs  home_page.module.scss  home_page.rs  not_found_page.rs  preview_article_page.rs  top_page.module.scss  top_page.rs
app/src/front/pages/admin/: article_editor.rs  article_editor_state.rs  article_list.rs  layout.rs  mod.rs
app/src/front/pages/admin/article_editor/: view.rs
app/src/front/pages/admin_page/: article_editor.rs  article_list.module.scss  article_list.rs  images_page.module.scss  images_page.rs  layout.module.scss  layout.rs
app/src/front/pages/admin_page/article_editor/: article_editor.module.scss  state.rs  view.rs
app/src/front/pages/admin_page/article_editor/view/: article_editor_page.rs  article_form.rs  editor_header.rs  editor_workspace.rs  markdown_preview.rs
app/src/front/pages/article_page/: article_page_meta.rs  article_page_view.rs
app/src/front/pages/preview_article_page/: preview_article_page_meta.rs  preview_article_page_view.rs
app/src/front/pages/top_page/: top_page_meta.rs  top_page_view.rs
app/src/server/: admin_routes.rs  auth.rs  config.rs  contexts.rs  core.rs  dbsc_routes.rs  models.rs  seo_routes.rs  services.rs  utils.rs
app/src/server/http/: request.rs  response.rs
app/src/server/models/: NewtArticle.rs  local_article.rs  newt_article.rs  newt_author.rs  qiita_article.rs  word_press_article.rs  word_press_category.rs
app/src/server/services/: cloudflare.rs  dbsc.rs  gcs.rs  gcs_signing.rs  imgix.rs  newt.rs  qiita.rs  signing.rs  word_press.rs
app/src/server/utils/: html.rs  url.rs
app/tests/: admin_handlers_test.rs
assets/: google.min.css  (+2 more)
cms/: Cargo.toml
cms/src/: error.rs  lib.rs  models.rs  queries.rs  repositories.rs  services.rs  test_utils.rs  value_objects.rs
cms/src/queries/: admin_article.rs  category.rs  draft_article.rs  image.rs  published_article.rs
cms/src/repositories/: category.rs  draft_article.rs  image.rs  published_article.rs
cms/src/services/: admin_article.rs  category.rs  draft_article.rs  image.rs  published_article.rs
cms/src/value_objects/: published_article_slug.rs  published_article_title.rs
cms/tests/: admin_article_query_test.rs  common.rs  draft_article_query_test.rs  draft_article_repository_test.rs  published_article_query_test.rs  published_article_repository_test.rs  services_test.rs
front/: Cargo.toml
front/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
(+38 files in other folders)
