[workspace]
members = ["app", "cms", "front", "server"]
resolver = "2"

[workspace.dependencies]
axum = { version = "0.8.8", features = ["macros"] }
chrono = { version = "=0.4.42", features = ["serde"] }
console_error_panic_hook = "0.1.7"
dotenv = "0.15.0"
easy_init_newrelic_opentelemetry = "0.3.0"
envy = "0.4.2"
http = "1.4.0"
leptos = { version = "0.8.15", default-features = false } #"nightly", "hydration"] }
leptos-use = { version = "0.17.0" }
leptos_axum = { version = "0.8.7", default-features = false }
leptos_meta = { version = "0.8.5", default-features = false }
leptos_router = { version = "0.8.11", default-features = false }
mockito = "1.7.1"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls", "stream"] }
select = "0.6.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }
stylance = { version = "0.7.4" }
thiserror = "2.0.17"
time = "0.3.44"
tokio = { version = "1.48", features = [
    "rt-multi-thread",
    "macros",
    "time",
] }
tower = { version = "0.5.2" }
tower-http = { version = "0.6.8", features = ["fs"] }
tracing = "0.1.44"
tracing-wasm = "0.2.1"
url = "2.5.7"
uuid = { version = "1", features = ["v7", "serde", "js"] }
wasm-bindgen = "0.2.106"
gloo-net = { version = "0.6", default-features = false, features = ["http"] }
comrak = { version = "0.49", default-features = false }
google-cloud-storage = "1.6"
google-cloud-auth = "1.4"

# OAuth / Session
oauth2 = "5"
tower-sessions = "0.14"
tower-sessions-redis-store = "0.16"
fred = "10"

[profile.release]
panic = "abort"

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[[workspace.metadata.cargo-all-features]]
denylist = ["axum", "tower", "tower-http", "tokio", "sqlx", "leptos_axum"]
skip_feature_sets = [["ssr", "hydrate"]]

[[workspace.metadata.leptos]]
name = "blog-romira-dev"
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "blog-romira-dev"
# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"
# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"
# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "style/stylance/_index.scss"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "assets"
# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"
# The port to use for automatic reload monitoring
reload-port = 3001
# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"
#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"
# Set by cargo-leptos watch when building with that tool. Controls whether autoreload JS will be included in the head
watch = true
# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"
# The features to use when compiling the bin target
bin-package = "blog-romira-dev-server"
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = []

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
lib-package = "blog-romira-dev-front"
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = []

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

lib-profile-release = "wasm-release"

hash-file = "hash.txt"
hash-files = false
