[package]
name = "blog-romira-dev-cms"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[features]
test-utils = []

[dev-dependencies]
tokio = { workspace = true }
dotenv = { workspace = true }
blog-romira-dev-cms = { path = ".", features = ["test-utils"] }
