[package]
name = "blog-romira-dev-front"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
blog-romira-dev-app = { path = "../app", features = ["hydrate"] }
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
leptos = { workspace = true, features = ["hydrate"] }
log = { workspace = true }
tracing-wasm = { workspace = true }
wasm-bindgen = { workspace = true }
