[package]
name = "blog-romira-dev-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
blog-romira-dev-app = { path = "../app", features = ["ssr"] }
easy_init_newrelic_opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
http = { workspace = true }
leptos = { workspace = true, features = ["ssr"] }
leptos_axum = { workspace = true, features = ["default"] }
sqlx = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true, features = ["set-header"] }
tracing = { workspace = true }
tower-sessions = { workspace = true }
tower-sessions-redis-store = { workspace = true }
fred = { workspace = true }
